--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello world</h1>
+    <h1 style="background-color: blue; color: #fff">
+      Hello world! how r u doing?
+    </h1>
   </body>
 </html>
